[tool.poetry]
name = "contract-queue"
version = "0.1.0"
description = ""
authors = ["LAPTOP-VCGCOL4V <petercbull@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ipykernel = "^6.29.3"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
pydantic = "^2.6.3"
pandas = "2.1.4"
pymupdf = "^1.23.26"
python-magic = "^0.4.27"
openpyxl = "^3.1.2"
pendulum = "^3.0.0"
boto3 = "^1.34.54"
langchain = "^0.1.10"
tiktoken = "^0.6.0"
openai = "0.28.1"
pypdf = "^4.0.2"
psycopg2 = "^2.9.9"
pgvector = "^0.2.5"
sqlalchemy = ">=1.4.28,<2.0"
apache-airflow = "^2.8.2"
apache-airflow-providers-openai = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
