[tool.poetry]
name = "contract-queue"
version = "0.1.0"
description = ""
authors = ["LAPTOP-VCGCOL4V <petercbull@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ipykernel = "^6.29.3"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
pydantic = "^2.6.3"
pandas = "2.1.4"
pymupdf = "^1.23.26"
python-magic = "^0.4.27"
openpyxl = "^3.1.2"
pendulum = "^3.0.0"
boto3 = "^1.34.54"
langchain = "^0.1.10"
tiktoken = "^0.6.0"
pypdf = "^4.0.2"
psycopg2 = "^2.9.9"
pgvector = "^0.2.5"
sqlalchemy = ">=1.4.28,<2.0"
fastapi = "^0.110.0"
watchdog = {extras = ["watchmedo"], version = "^3.0.0"}
debugpy = "^1.8.1"
pytest = "^7.4.4"
uvicorn = "^0.24.0.post1"
openai = "^1.13.3"
instructor = "^0.6.4"
pyarrow = "^15.0.1"
fastparquet = "^2024.2.0"
asyncpg = "^0.29.0"
tqdm = "^4.66.2"
anthropic = "^0.19.2"
poetry-plugin-export = "^1.6.0"
rich = "^13.7.1"
pyspark = "^3.5.1"
networkx = "^3.2.1"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
plotly = "^5.20.0"
nbformat = "^5.10.3"
trio = "^0.25.0"
pytest-asyncio = "^0.23.6"
llama-index = "^0.10.25"
arize-phoenix = {extras = ["evals"], version = "^3.19.3"}
protobuf = "<4.0"
langfuse = "^2.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
