[tool.poetry]
name = "contract-queue"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.0"
debugpy = "^1.8.1"
streamlit-option-menu = "^0.3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
